# rust-postgres-alpaca-backend-service

./: .gitignore  Makefile  dockerfile_backend  dockerfile_frontend  push_backend.sh  push_frontend.sh  sqlx-data.json
.sqlx/: query-0711fdd10ec35581d2e378742b78c9f8335600e58a3467a72c8d40a792d123b6.json  query-167dd2268f447cecb71941614e033df8aecfb57cc51a2d7c90a686a9019e4db0.json  query-19833343914e34d86993b64fa2ff63a974f6f14562c84884e504766fa238fac9.json  query-2f8936d3543db55cc50dcb2c09d29bb2e43bb6fbaaced1b57d3df6553960f68b.json  query-30f255854809dabc1008f3e29350fef9db68cbd1a7bf935d60c99c0b1e267339.json  query-33d366b1a50612823f96303da32e21e4a81f1efb966ab9ca602b55cebf682cde.json  query-41e310b7a132e9b1fe68c9c9549392df44f6206231105591f371d00e75d6342b.json  query-4b04d431e8ecd7c2bb516e1d62fe547b01193aacf53f19234546d83e2a1f4fd9.json  query-4d1908563c58d287dd1ce4d77e42407ffcd17043c07b2cfdb4453e78d1909e0e.json  query-4e9d3bf266c0d115ec8c3e85cedc7a532ce0e9595f57ee9c373f562548262bc4.json  query-5289517c19ee0f73d3cfed9f849e68cb70e1346573d4944d5686fbae96039202.json  query-6096eaf4c31d8d64ead6916f40056f96102b199a58eb36c502118e4a5617be0d.json  query-641eb9dd1c480ccc423b35def138d576f22b37d947087f4f1276f1034c40dd8b.json  query-6890a7efe2764ef09fd174c44d2a9a0fa78fdfbb741528f1778e80d53acd9adc.json  query-7075f9dfd124b73b780d1918570aeff82176454a7d8621ae652026c3908afcf9.json  query-85a249f6c84fe265732afafc3156e4166eb3a117ca447f04471d8bcacfdd3e1d.json  query-867c42b4a9320c7c2a1591f696ecc73c33276b97de4465d97d0c5177875600f6.json  query-884ca4bfd2aaadf5a8429b50cc543000263f123dbe4c96f678a3fc9203793484.json  query-8b8ea83a8ddb8fb72d80ff90957c1083e15472e2d583a687099c52dad2bf3844.json  query-9321c48e63b3aa63c9a199651abb950eb7afb6e6c8376b33f10e2228ed996aff.json  query-97619bf5f57d753ca6ba7bc660611ead26547c67bccbacaaaf317abceab42a3b.json  query-a77a469257f0965db9d3ab3f8f2a7230126ad44458d497151e4c7ca7b71f5160.json  query-b06ee7778b547595f6f447e4bec99eb15fa6cd84acc3e073d20fa2071da34e40.json  query-b207043878cb989d7aa6229d8e5ce62d25d53b050d57faee0c2ecab4453d0409.json  query-b2fa705f5ff94831630c8927f722c6cecece0d825e9256b70fd9c2b55f6148d5.json  query-b719258d9bd3bb870db33a104cdc03fa10028f855bc41cec26485330816dd0a6.json  query-bf2d7f3cb8ce566e8735d8ecfd6b8fb2536318fd1249293b6c521bdd2f2f25d3.json  query-c243f022f6ae728ead04c7260773743c27a513247e308a930cd8e0e6375b3c14.json  (+10 more)
backend/: Cargo.toml
common_lib/: Cargo.toml
common_lib/src/: account.rs  alpaca_activity.rs  alpaca_api.rs  alpaca_api_structs.rs  alpaca_order.rs  alpaca_order_log.rs  alpaca_position.rs  alpaca_transaction_status.rs  common_structs.rs  dashboard.rs  db.rs  diff_calc.rs  error.rs  finnhub.rs  http.rs  init.rs  lib.rs  market_hours.rs  order.rs  order_log_entry.rs  position.rs  position_local.rs  remote_position.rs  sell_position.rs  settings.rs  sqlx_pool.rs  symbol.rs  symbol_list.rs  trade_data.rs  trade_setting_profile.rs  trade_struct.rs  transaction.rs
frontend/: Cargo.toml
frontend/src/: account.rs  activities.rs  analysis.rs  configuration.rs  dashboard.rs  edit_settings.rs  login.rs  main.rs  metrics.rs  order.rs  positions.rs  profit.rs  signup.rs  symbols.rs  transactions.rs  utils.rs  web_server.rs
frontend/src/frontend_lib/frontend/: edit_settings.rs  mod.rs  positions.rs  web_server.rs
frontend/static/certificate/: cert.pem  key.pem
frontend/static/templates/: account.html  activity_table.html  analysis.html  base0.html  dashboard.html  order_table.html  position.html  position_table.html  profit_summary.html  profit_table.html  settings_table.html  symbol_table.html
(+23 files in other folders)
