[package]
name = "common_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features=[ "std", "registry", "env-filter", "fmt"]}
sqlx = { version="0.6.3", features=["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "bigdecimal", "offline"]}


actix-web = "4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.96"
strum={ version="0.24.1", features=["derive"]}  # https://stackoverflow.com/questions/69015213/how-can-i-display-an-enum-in-lowercase
chrono = { version = "0.4.23", features = ["serde"]}
chrono-tz = "0.8.2"
bigdecimal = {version = "0.3.0", features = ["serde"]}

once_cell = "1.17.1"
reqwest = {version="0.11.18", features=["rustls-tls-webpki-roots"]}
