[package]
name = "frontend"
version = "0.2.0"
authors = ["gp <github@swimr.com>"]
edition = "2021"

[dependencies]
common_lib = { path="../common_lib"}
tracing = "0.1.37"
tokio = { version = "1.24.1", features = ["rt-multi-thread"] }

sqlx = { version="0.6.3", features=["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "bigdecimal", "offline"]}
#sqlx = { version="0.7.1", features=["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "bigdecimal"]}


#crossbeam = "0.8.2"
#crossbeam-channel = "0.5.6"
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"]}
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"


url = "2.2.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json="1.0.91"
reqwest = { version = "0.11.14", features = ["rustls-tls-webpki-roots", "json"] }

#bigdecimal = {version = "0.4.1", features = ["serde"]}
bigdecimal = {version = "0.3.0", features = ["serde"]}

chrono = { version = "0.4.23", features = ["serde"]}
chrono-tz = "0.8.2"
time = "0.3.20"
rust_decimal = "1.27.0"
actix-web = "4"
config = "0.13.3"
handlebars = { version = "4.3.6", features = ["dir_source"] }
uuid = { version = "0.8.2", features = ["v4"] }
argon2 = { version = "0.4.1", features = ["std"] }
rand = { version = "0.8.5", features=["std_rng"] }
actix-session = { version = "0.7.2", features = ["cookie-session"] }
once_cell = "1.17.1"